--- a/services.html
+++ b/services.html
@@ -249,88 +249,43 @@
 
   <main>
     <div class="overlay-tile">
-      <h2>Explore Our Digital Services & Products</h2>
-      <p>Purchase virtual assistant services and eBooks securely using Snipcart.</p>
+      <h2>Digital Services & eBooks</h2>
+      <p>Buy expert support services or download productivity resources instantly.</p>
 
       <div class="catalog">
 
-        <!-- Business Analysis -->
-        <div class="catalog-item">
-          <img src="https://cdn-icons-png.flaticon.com/512/3105/3105898.png" alt="Business Analysis">
-          <h3>Business Analysis</h3>
-          <p>Optimize your business processes with our expert analysis.</p>
-          <p><strong>$49.99</strong></p>
-          <button class="snipcart-add-item"
-            data-item-id="business-analysis"
-            data-item-name="Business Analysis"
-            data-item-price="49.99"
-            data-item-url="https://thqcyberdivision.github.io/services.html"
-            data-item-description="Comprehensive business analysis for increased productivity.">
-            Purchase
-          </button>
-        </div>
-
-        <!-- Document Writing -->
+        <!-- Example Product: Document Writing -->
         <div class="catalog-item">
           <img src="https://cdn-icons-png.flaticon.com/512/281/281760.png" alt="Document Writing">
           <h3>Document Writing</h3>
-          <p>Professional document writing for reports, proposals, and more.</p>
+          <p>Professionally crafted documents, letters, and content.</p>
           <p><strong>$29.99</strong></p>
           <button class="snipcart-add-item"
             data-item-id="document-writing"
             data-item-name="Document Writing"
             data-item-price="29.99"
             data-item-url="https://thqcyberdivision.github.io/services.html"
-            data-item-description="Professional business document preparation.">
-            Purchase
+            data-item-description="Document preparation services for clients.">
+            Buy Now
           </button>
         </div>
 
-        <!-- Proofreading -->
+        <!-- eBook with PDF/EPUB Selection -->
         <div class="catalog-item">
-          <img src="https://cdn-icons-png.flaticon.com/512/2659/2659360.png" alt="Proofreading">
-          <h3>Proofreading</h3>
-          <p>Ensure your documents are clean, clear, and professional.</p>
-          <p><strong>$19.99</strong></p>
+          <img src="https://cdn-icons-png.flaticon.com/512/3515/3515784.png" alt="Productivity eBook">
+          <h3>Productivity eBook</h3>
+          <p>Learn how to boost productivity. Choose PDF or EPUB format.</p>
+          <p><strong>$9.99</strong></p>
           <button class="snipcart-add-item"
-            data-item-id="proofreading"
-            data-item-name="Proofreading"
-            data-item-price="19.99"
+            data-item-id="productivity-ebook"
+            data-item-name="Productivity eBook"
+            data-item-price="9.99"
             data-item-url="https://thqcyberdivision.github.io/services.html"
-            data-item-description="In-depth proofreading for spelling, grammar, and clarity.">
-            Purchase
-          </button>
-        </div>
-
-        <!-- Data Entry -->
-        <div class="catalog-item">
-          <img src="https://cdn-icons-png.flaticon.com/512/1828/1828919.png" alt="Data Entry">
-          <h3>Data Entry</h3>
-          <p>Fast, accurate entry into spreadsheets, CRMs, and systems.</p>
-          <p><strong>$24.99</strong></p>
-          <button class="snipcart-add-item"
-            data-item-id="data-entry"
-            data-item-name="Data Entry"
-            data-item-price="24.99"
-            data-item-url="https://thqcyberdivision.github.io/services.html"
-            data-item-description="Digital or manual data entry for business systems.">
-            Purchase
-          </button>
-        </div>
-
-        <!-- Research -->
-        <div class="catalog-item">
-          <img src="https://cdn-icons-png.flaticon.com/512/3062/3062634.png" alt="Research">
-          <h3>Research Services</h3>
-          <p>Thorough research reports with references for your needs.</p>
-          <p><strong>$34.99</strong></p>
-          <button class="snipcart-add-item"
-            data-item-id="research"
-            data-item-name="Research Services"
-            data-item-price="34.99"
-            data-item-url="https://thqcyberdivision.github.io/services.html"
-            data-item-description="Targeted research, summarized with citations.">
-            Purchase
+            data-item-description="Digital eBook in PDF or EPUB"
+            data-item-custom1-name="Format"
+            data-item-custom1-options="PDF|EPUB"
+            data-item-custom1-required="true">
+            Buy eBook
           </button>
         </div>
 
@@ -338,36 +293,19 @@
         <div class="catalog-item">
           <img src="https://cdn-icons-png.flaticon.com/512/190/190411.png" alt="Remote IT Support">
           <h3>Remote IT Support</h3>
-          <p>Get expert help for your tech issues, wherever you are.</p>
+          <p>Get tech help fast — securely and remotely.</p>
           <p><strong>$39.99</strong></p>
           <button class="snipcart-add-item"
-            data-item-id="remote-it"
+            data-item-id="remote-support"
             data-item-name="Remote IT Support"
             data-item-price="39.99"
             data-item-url="https://thqcyberdivision.github.io/services.html"
-            data-item-description="Tech troubleshooting, setup help, and remote maintenance.">
-            Purchase
+            data-item-description="Technical support and troubleshooting over internet.">
+            Get Support
           </button>
         </div>
 
-        <!-- Productivity eBook -->
-        <div class="catalog-item">
-          <img src="https://cdn-icons-png.flaticon.com/512/3515/3515784.png" alt="Productivity eBook">
-          <h3>Productivity eBook</h3>
-          <p>Master your focus with our digital productivity guide.</p>
-          <p><strong>$9.99</strong></p>
-          <button class="snipcart-add-item"
-            data-item-id="productivity-ebook"
-            data-item-name="Productivity eBook"
-            data-item-price="9.99"
-            data-item-url="https://thqcyberdivision.github.io/services.html"
-            data-item-description="Productivity tips from THQ — available in PDF or EPUB."
-            data-item-custom1-name="Format"
-            data-item-custom1-options="PDF|EPUB"
-            data-item-custom1-required="true">
-            Buy eBook
-          </button>
-        </div>
+        <!-- Add more items similarly -->
 
       </div>
     </div>
