--- a/services.html
+++ b/services.html
@@ -218,7 +218,7 @@
 <body>
     <script>
         window.SnipcartSettings = {
-          publicApiKey: "YOUR_PUBLIC_API_KEY",
+          publicApiKey: "ZDA4ZjAzN2MtNGJkMS00NThjLWI0NjQtYzU2MWM0MGYxMjNjNjM4ODc3Njk2MjU1Mzg3MzU1",
           loadStrategy: "on-user-interaction"
         };
   </script>
