--- a/services.html
+++ b/services.html
@@ -234,11 +234,12 @@
 
 <body>
 
-  <header>
+ <header>
     <a href="index.html">
       <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
     </a>
     <h1>Our Virtual Assistant Services</h1>
+    <a href="#" class="snipcart-checkout">🛒 Cart (<span class="snipcart-items-count"></span>)</a>
   </header>
 
   <nav>
