--- a/services.html
+++ b/services.html
@@ -272,6 +272,22 @@
             Buy Now
           </button>
         </div>
+          
+        <div class="catalog-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/149/149852.png" alt="Remote Sensing Service">
+            <h3>Remote Sensing Service</h3>
+            <p>Accurate mapping and analysis of land, territorial claims, and property boundaries using advanced satellite and aerial data.</p>
+            <p><strong>$59.99</strong></p>
+            <button class="snipcart-add-item"
+              data-item-id="remote-sensing-service"
+              data-item-name="Remote Sensing Service"
+              data-item-price="59.99"
+              data-item-url="https://thqcyberdivision.github.io/services.html"
+              data-item-description="Professional remote sensing for land and property mapping.">
+              Order Service
+            </button>
+          </div>
+
 
         <!-- eBook with PDF/EPUB Selection -->
         <div class="catalog-item">
