--- a/services.html
+++ b/services.html
@@ -263,14 +263,11 @@
           <h3>Document Writing</h3>
           <p>Professionally crafted documents, letters, and content.</p>
           <p><strong>$29.99</strong></p>
-          <button class="snipcart-add-item"
-            data-item-id="document-writing"
-            data-item-name="Document Writing"
-            data-item-price="29.99"
-            data-item-url="https://thqcyberdivision.github.io/services.html"
-            data-item-description="Document preparation services for clients.">
-            Buy Now
-          </button>
+          
+            <a href="https://nowpayments.io/payment/?iid=4694582531&source=button" target="_blank" rel="noreferrer noopener">
+            <img src="https://nowpayments.io/images/embeds/payment-button-white.svg" alt="Cryptocurrency & Bitcoin payment button by NOWPayments">
+        </a>
+
         </div>
           
         <div class="catalog-item">
@@ -278,14 +275,9 @@
             <h3>Remote Sensing Service</h3>
             <p>Accurate mapping and analysis of land, territorial claims, and property boundaries using advanced satellite and aerial data.</p>
             <p><strong>$59.99</strong></p>
-            <button class="snipcart-add-item"
-              data-item-id="remote-sensing-service"
-              data-item-name="Remote Sensing Service"
-              data-item-price="59.99"
-              data-item-url="https://thqcyberdivision.github.io/services.html"
-              data-item-description="Professional remote sensing for land and property mapping.">
-              Order Service
-            </button>
+            <a href="https://nowpayments.io/payment/?iid=4425899432&source=button" target="_blank" rel="noreferrer noopener">
+                <img src="https://nowpayments.io/images/embeds/payment-button-black.svg" alt="Crypto payment button by NOWPayments">
+            </a>
           </div>
 
 
@@ -314,14 +306,9 @@
           <h3>Remote IT Support</h3>
           <p>Get tech help fast — securely and remotely.</p>
           <p><strong>$39.99</strong></p>
-          <button class="snipcart-add-item"
-            data-item-id="remote-support"
-            data-item-name="Remote IT Support"
-            data-item-price="39.99"
-            data-item-url="https://thqcyberdivision.github.io/services.html"
-            data-item-description="Technical support and troubleshooting over internet.">
-            Get Support
-          </button>
+        <a href="https://nowpayments.io/payment/?iid=5126014508&source=button" target="_blank" rel="noreferrer noopener">
+            <img src="https://nowpayments.io/images/embeds/payment-button-black.svg" alt="Crypto payment button by NOWPayments">
+        </a>
         </div>
 
         <!-- Add more items similarly -->
