--- a/services.html
+++ b/services.html
@@ -263,10 +263,9 @@
           <h3>Document Writing</h3>
           <p>Professionally crafted documents, letters, and content.</p>
           <p><strong>$29.99</strong></p>
-          
-            <a href="https://nowpayments.io/payment/?iid=4694582531&source=button" target="_blank" rel="noreferrer noopener">
-            <img src="https://nowpayments.io/images/embeds/payment-button-white.svg" alt="Cryptocurrency & Bitcoin payment button by NOWPayments">
-        </a>
+          <a href="https://nowpayments.io/payment/?iid=4694582531&source=button" target="_blank" rel="noreferrer noopener">
+                <img src="https://nowpayments.io/images/embeds/payment-button-black.svg" alt="Crypto payment button by NOWPayments">
+            </a>
 
         </div>
           
