--- a/index.html
+++ b/index.html
@@ -250,6 +250,15 @@
         <div class="cta">
             <a href="services.html">Explore Our Services</a>
         </div>
+	
+	<section style="background:#fff; padding:20px; margin:30px auto; text-align:center; border-radius:10px; max-width:600px;">
+	  <h2>Support Our Work </h2>
+	  <p>We accept crypto donations. Your support helps us continue providing premium virtual assistance and cybersecurity services.</p>
+	  <a href="https://nowpayments.io/donation?api_key=9ac4376c-7348-487c-8a86-ebbd31bf037e" target="_blank" rel="noreferrer noopener">
+	    <img src="https://nowpayments.io/images/embeds/donation-button-black.svg" alt="Donate Crypto with NOWPayments" style="max-width:200px;">
+	  </a>
+	</section>
+
     </main>
 
 
