--- a/services.html
+++ b/services.html
@@ -279,6 +279,40 @@
             </a>
           </div>
 
+          <!-- Data Entry and Management -->
+<div class="catalog-item">
+  <img src="https://cdn-icons-png.flaticon.com/512/1006/1006555.png" alt="Data Entry and Management">
+  <h3>Data Entry and Management</h3>
+  <p>Accurate and organized entry of business or research data.</p>
+  <p><strong>$24.99</strong></p>
+  <a href="https://nowpayments.io/payment/?iid=4364330132&source=button" target="_blank" rel="noreferrer noopener">
+    <img src="https://nowpayments.io/images/embeds/payment-button-black.svg" alt="Crypto payment button by NOWPayments">
+  </a>
+</div>
+
+<!-- Document Retyping -->
+<div class="catalog-item">
+  <img src="https://cdn-icons-png.flaticon.com/512/3103/3103446.png" alt="Document Retyping">
+  <h3>Document Retyping</h3>
+  <p>Convert scanned or handwritten files into clean digital text.</p>
+  <p><strong>$19.99</strong></p>
+  <a href="https://nowpayments.io/payment/?iid=5310605057&source=button" target="_blank" rel="noreferrer noopener">
+    <img src="https://nowpayments.io/images/embeds/payment-button-black.svg" alt="Crypto payment button by NOWPayments">
+  </a>
+</div>
+
+<!-- Document Proofreading -->
+<div class="catalog-item">
+  <img src="https://cdn-icons-png.flaticon.com/512/2274/2274715.png" alt="Document Proofreading">
+  <h3>Document Proofreading</h3>
+  <p>Ensure clarity and professionalism with expert proofreading.</p>
+  <p><strong>$14.99</strong></p>
+  <a href="https://nowpayments.io/payment/?iid=4986461873&source=button" target="_blank" rel="noreferrer noopener">
+    <img src="https://nowpayments.io/images/embeds/payment-button-black.svg" alt="Crypto payment button by NOWPayments">
+  </a>
+</div>
+
+
 
         <!-- eBook with PDF/EPUB Selection -->
         <div class="catalog-item">
