--- a/services.html
+++ b/services.html
@@ -281,7 +281,7 @@
 
           <!-- Data Entry and Management -->
 <div class="catalog-item">
-  <img src="https://cdn-icons-png.flaticon.com/512/4962/4962984.png" alt="Data Entry and Management">
+  <img src="https://cdn-icons-png.flaticon.com/512/10872/10872049.png" alt="Data Entry and Management">
   <h3>Data Entry and Management</h3>
   <p>Accurate and organized entry of business or research data.</p>
   <p><strong>$24.99</strong></p>
@@ -292,7 +292,7 @@
 
 <!-- Document Retyping -->
 <div class="catalog-item">
-  <img src="https://cdn-icons-png.flaticon.com/512/3106/3106882.png" alt="Document Retyping">
+  <img src="https://png.pngtree.com/png-clipart/20250120/original/pngtree-sharing-share-file-document-copying-flat-color-icon-vector-png-image_4965666.png" alt="Document Retyping">
   <h3>Document Retyping</h3>
   <p>Convert scanned or handwritten files into clean digital text.</p>
   <p><strong>$19.99</strong></p>
@@ -305,7 +305,7 @@
 
 <!-- Document Proofreading -->
 <div class="catalog-item">
-  <img src="https://cdn-icons-png.flaticon.com/512/4270/4270595.png" alt="Document Proofreading">
+  <img src="https://cdn-icons-png.flaticon.com/512/3898/3898046.png" alt="Document Proofreading">
   <h3>Document Proofreading</h3>
   <p>Ensure clarity and professionalism with expert proofreading.</p>
   <p><strong>$14.99</strong></p>
@@ -318,7 +318,7 @@
 
         <!-- eBook with PDF/EPUB Selection -->
         <div class="catalog-item">
-          <img src="https://cdn-icons-png.flaticon.com/512/3515/3515784.png" alt="Productivity eBook">
+          <img src="https://cdn-icons-png.flaticon.com/512/5253/5253158.png" alt="Productivity eBook">
           <h3>Productivity eBook</h3>
           <p>Learn how to boost productivity. Choose PDF or EPUB format.</p>
           <p><strong>$9.99</strong></p>
