--- a/services.html
+++ b/services.html
@@ -279,6 +279,8 @@
             </a>
           </div>
 
+          
+
           <!-- Data Entry and Management -->
 <div class="catalog-item">
   <img src="https://cdn-icons-png.flaticon.com/512/10872/10872049.png" alt="Data Entry and Management">
@@ -346,7 +348,17 @@
         </a>
         </div>
 
-        <!-- Add more items similarly -->
+        <!-- Land for Lease -->
+        <div class="catalog-item">
+          <img src="https://static.vecteezy.com/system/resources/previews/035/642/177/non_2x/property-lease-icon-line-illustration-vector.jpg" alt="Land for Lease Icon">
+          <h3>Land for Strategic Leasing</h3>
+          <p>Lease a portion of a secured 5-hectare private estate. Suitable for embassies, women-only computer based military training centers, data centers, satellite ground stations, health deployment infrastructure or girls only school.</p>
+          <p><strong>Contact for Lease Terms</strong></p>
+          <a href="mailto:thqcs@protonmail.com?subject=Land Lease Inquiry - THQCDU-21722" style="background-color: #4169e1; color: white; padding: 10px 15px; border-radius: 5px; font-weight: bold; text-decoration: none;">
+            📩 Contact Us
+          </a>
+        </div>
+
 
       </div>
     </div>
