--- a/install_api_html/packages/index.html
+++ b/install_api_html/packages/index.html
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <div id="bizstarter_package_container" data-partnerid="enter your partner ID"></div>
+    <div id="bizstarter_package_container" data-partnerid="002922ba-afa7-4ce3-8dbb-857eb8bb5635"></div>
 
     <script src="/bs-js/jquery.min.js"></script>
     <script src="https://api.bizstarter.us/company/js/company.js"></script>
