--- a/install_api_html/additional-services/service/index.html
+++ b/install_api_html/additional-services/service/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    <div id="bizstarter_services_container" data-partnerid="enter your partner ID"></div>
+    <div id="bizstarter_services_container" data-partnerid="002922ba-afa7-4ce3-8dbb-857eb8bb5635"></div>
 
     <script src="/bs-js/jquery.min.js"></script>
     <script src="/bs-js/mask.js"></script>
