--- a/services.html
+++ b/services.html
@@ -316,27 +316,19 @@
   </a>
 </div>
 
+<!-- Business Incorporation Services -->
+<div class="catalog-item">
+  <img src="https://cdn-icons-png.flaticon.com/512/1159/1159633.png" alt="Business Incorporation Icon">
+  <h3>Business Incorporation Services</h3>
+  <p>Launch your business in all 50 Republic of United States of America's jurisdictions with full administrative support and expert guidance.</p>
+  <a href="https://thqcyberdivision.github.io" target="_blank" rel="noreferrer noopener"
+     style="background-color: #4169e1; color: white; padding: 10px 15px; border-radius: 5px; font-weight: bold; text-decoration: none; display: inline-block;">
+     Start Incorporation
+  </a>
+</div>
 
 
-        <!-- eBook with PDF/EPUB Selection -->
-        <div class="catalog-item">
-          <img src="https://cdn-icons-png.flaticon.com/512/5253/5253158.png" alt="Productivity eBook">
-          <h3>Productivity eBook</h3>
-          <p>Learn how to boost productivity. Choose PDF or EPUB format.</p>
-          <p><strong>$9.99</strong></p>
-          <button class="snipcart-add-item"
-            data-item-id="productivity-ebook"
-            data-item-name="Productivity eBook"
-            data-item-price="9.99"
-            data-item-url="https://thqcyberdivision.github.io/services.html"
-            data-item-description="Digital eBook in PDF or EPUB"
-            data-item-custom1-name="Format"
-            data-item-custom1-options="PDF|EPUB"
-            data-item-custom1-required="true">
-            Buy eBook
-          </button>
-        </div>
-
+        
         <!-- Remote IT Support -->
         <div class="catalog-item">
           <img src="https://cdn-icons-png.flaticon.com/512/190/190411.png" alt="Remote IT Support">
