--- a/services.html
+++ b/services.html
@@ -320,7 +320,7 @@
 <div class="catalog-item">
   <img src="https://cdn-icons-png.flaticon.com/512/1159/1159633.png" alt="Business Incorporation Icon">
   <h3>Business Incorporation Services</h3>
-  <p>Launch your business in all 50 jurisdictions of the Republic of United States of America with full administrative support and expert guidance.</p>
+  <p>Launch your business in all fifty ( 50 ) jurisdictions of the Republic of United States of America with full administrative support and expert guidance.</p>
   <a href="https://thqcyberdivision.github.io" target="_blank" rel="noreferrer noopener"
      style="background-color: #4169e1; color: white; padding: 10px 15px; border-radius: 5px; font-weight: bold; text-decoration: none; display: inline-block;">
     🚀 Start Incorporation
