--- a/services.html
+++ b/services.html
@@ -370,7 +370,42 @@
       <a href="terms.html">Terms</a> |
       <a href="privacy.html">Privacy</a> |
       <a href="mailto:thqcs@protonmail.com">Contact</a>
-    </nav>
+    </nav
+    <div style="margin-top: 15px;">
+  <h4 style="color: white;">Accepted Payment Methods</h4>
+  <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; margin-top: 10px;">
+    <!-- Cryptocurrency -->
+    <div title="Cryptocurrencies">
+      <img src="https://cdn-icons-png.flaticon.com/512/825/825519.png" alt="Cryptocurrency" width="32" height="32" />
+    </div>
+
+    <!-- Bartering -->
+    <div title="Bartering / Exchange">
+      <img src="https://cdn-icons-png.flaticon.com/512/1061/1061160.png" alt="Bartering" width="32" height="32" />
+    </div>
+
+    <!-- Land Titles -->
+    <div title="Land Titles">
+      <img src="https://cdn-icons-png.flaticon.com/512/2731/2731620.png" alt="Land Title" width="32" height="32" />
+    </div>
+
+    <!-- Mineral Rights -->
+    <div title="Mineral Rights">
+      <img src="https://cdn-icons-png.flaticon.com/512/7394/7394201.png" alt="Mineral Rights" width="32" height="32" />
+    </div>
+
+    <!-- Water Rights -->
+    <div title="Water Rights">
+      <img src="https://cdn-icons-png.flaticon.com/512/1673/1673560.png" alt="Water Rights" width="32" height="32" />
+    </div>
+
+    <!-- City Licenses -->
+    <div title="City Licenses">
+      <img src="https://cdn-icons-png.flaticon.com/512/4354/4354666.png" alt="City Licenses" width="32" height="32" />
+    </div>
+  </div>
+</div>
+
   </footer>
 </body>
 </html>
