--- a/services.html
+++ b/services.html
@@ -365,32 +365,38 @@
   <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; margin-top: 10px;">
     <!-- Cryptocurrency -->
     <div title="Cryptocurrencies">
-      <img src="https://cdn-icons-png.flaticon.com/512/825/825519.png" alt="Cryptocurrency" width="32" height="32" />
+      <img src="https://ipfs.io/ipfs/QmeW9Fkw8T2rv9EFmkeBxVX4mttbXHmPnQejdmRus8faPz" alt="Cryptocurrency" width="32" height="32" style="transition: 0.3s; border-radius: 8px;"
+     onmouseover="this.style.boxShadow='0 0 8px 3px rgba(173,216,230,0.7)'"
+     onmouseout="this.style.boxShadow='none'"/>
     </div>
 
     <!-- Bartering -->
     <div title="Bartering / Exchange">
-      <img src="https://cdn-icons-png.flaticon.com/512/1061/1061160.png" alt="Bartering" width="32" height="32" />
+      <img src="https://ipfs.io/ipfs/QmUDzxmEZJ4cepJcpgU36QW2jnFdXhhrL5Xe3v4pesrxow" alt="Bartering" width="32" height="32" style="transition: 0.3s; border-radius: 8px;"
+     onmouseover="this.style.boxShadow='0 0 8px 3px rgba(173,216,230,0.7)'"
+     onmouseout="this.style.boxShadow='none'"/>
     </div>
 
     <!-- Land Titles -->
     <div title="Land Titles">
-      <img src="https://cdn-icons-png.flaticon.com/512/2731/2731620.png" alt="Land Title" width="32" height="32" />
+      <img src="https://ipfs.io/ipfs/QmQsLDsPdk5VGV1LejVzbKFqdxjU1LqmDzspHptwKbiZJZ" alt="Land Title" width="32" height="32" style="transition: 0.3s; border-radius: 8px;"
+     onmouseover="this.style.boxShadow='0 0 8px 3px rgba(173,216,230,0.7)'"
+     onmouseout="this.style.boxShadow='none'"/>
     </div>
 
     <!-- Mineral Rights -->
-    <div title="Mineral Rights">
-      <img src="https://cdn-icons-png.flaticon.com/512/7394/7394201.png" alt="Mineral Rights" width="32" height="32" />
+    <div title="Mineral/Water/Oil/Gas Rights">
+      <img src="https://ipfs.io/ipfs/QmYEBhHHgfzEsd352oXd5MdNvbECCfSiubRQi4RXsLjRN7" alt="Mineral/Water Rights" width="32" height="32" style="transition: 0.3s; border-radius: 8px;"
+     onmouseover="this.style.boxShadow='0 0 8px 3px rgba(173,216,230,0.7)'"
+     onmouseout="this.style.boxShadow='none'"/>
     </div>
 
-    <!-- Water Rights -->
-    <div title="Water Rights">
-      <img src="https://cdn-icons-png.flaticon.com/512/1673/1673560.png" alt="Water Rights" width="32" height="32" />
-    </div>
 
     <!-- City Licenses -->
     <div title="City Licenses">
-      <img src="https://cdn-icons-png.flaticon.com/512/4354/4354666.png" alt="City Licenses" width="32" height="32" />
+      <img src="https://ipfs.io/ipfs/QmcKBP7w8eoamiZDddeKTw6KoW2RQTaky6gCk7ZDLwquRR" alt="City Licenses" width="32" height="32" style="transition: 0.3s; border-radius: 8px;"
+     onmouseover="this.style.boxShadow='0 0 8px 3px rgba(173,216,230,0.7)'"
+     onmouseout="this.style.boxShadow='none'"/>
     </div>
   </div>
 </div>
