--- a/services.html
+++ b/services.html
@@ -366,25 +366,25 @@
     <!-- Cryptocurrency -->
     <div title="Cryptocurrencies">
       <img src="https://ipfs.io/ipfs/QmeW9Fkw8T2rv9EFmkeBxVX4mttbXHmPnQejdmRus8faPz" alt="Cryptocurrency" width="32" height="32" style="transition: 0.3s; border-radius: 8px;"
-     onmouseover="this.style.boxShadow='0 0 8px 3px rgba(173,216,230,0.7)'" onmouseout="this.style.boxShadow='none'"/>
+     onmouseover="this.style.boxShadow='0 0 8px 3px '" onmouseout="this.style.boxShadow='none'"/>
     </div>
 
     <!-- Bartering -->
     <div title="Bartering / Exchange">
       <img src="https://ipfs.io/ipfs/QmUDzxmEZJ4cepJcpgU36QW2jnFdXhhrL5Xe3v4pesrxow" alt="Bartering" width="32" height="32" style="transition: 0.3s; border-radius: 8px;"
-     onmouseover="this.style.boxShadow='0 0 8px 3px rgba(173,216,230,0.7)'" onmouseout="this.style.boxShadow='none'"/>
+     onmouseover="this.style.boxShadow='0 0 8px 3px '" onmouseout="this.style.boxShadow='none'"/>
     </div>
 
     <!-- Land Titles -->
     <div title="Land Titles">
       <img src="https://ipfs.io/ipfs/QmQsLDsPdk5VGV1LejVzbKFqdxjU1LqmDzspHptwKbiZJZ" alt="Land Title" width="32" height="32" style="transition: 0.3s; border-radius: 8px;"
-     onmouseover="this.style.boxShadow='0 0 8px 3px rgba(173,216,230,0.7)'" onmouseout="this.style.boxShadow='none'"/>
+     onmouseover="this.style.boxShadow='0 0 8px 3px '" onmouseout="this.style.boxShadow='none'"/>
     </div>
 
     <!-- Mineral Rights -->
     <div title="Mineral/Water/Oil/Gas Rights">
       <img src="https://ipfs.io/ipfs/QmYEBhHHgfzEsd352oXd5MdNvbECCfSiubRQi4RXsLjRN7" alt="Mineral/Water Rights" width="32" height="32" style="transition: 0.3s; border-radius: 8px;"
-     onmouseover="this.style.boxShadow='0 0 8px 3px rgba(173,216,230,0.7)'" onmouseout="this.style.boxShadow='none'"/>
+     onmouseover="this.style.boxShadow='0 0 8px 3px'" onmouseout="this.style.boxShadow='none'"/>
     </div>
 
 
