--- a/services.html
+++ b/services.html
@@ -309,7 +309,7 @@
 <div class="catalog-item">
   <img src="https://cdn-icons-png.flaticon.com/512/1159/1159633.png" alt="Business Incorporation Icon">
   <h3>Business Incorporation Services</h3>
-  <p>Launch your business in all fifty ( 50 ) jurisdictions of the Republic of United States of America with full administrative support and expert guidance. Already incorporated? Try services like Amendment Filing, DBA, Sales Tax Permit, Registered Agent, EIN, Withdrawals, and Good Standing.</p>
+  <p>Launch or manage your business in any of fifty ( 50 ) jurisdictions of the Republic of United States of America with full administrative support and expert guidance.</p>
   <a href="https://thqcyberdivision.github.io/packages/" target="_blank" rel="noreferrer noopener"
      style="background-color: #4169e1; color: white; padding: 10px 15px; border-radius: 5px; font-weight: bold; text-decoration: none; display: inline-block;">
     🚀 Start Incorporation
