--- a/services.html
+++ b/services.html
@@ -328,10 +328,10 @@
 
 </div>
 
-<!-- CIPC Business Incorporation Services -->
+<!-- South African Business Incorporation Services -->
 <div class="catalog-item">
   <img src="https://cdn-icons-png.flaticon.com/512/2991/2991112.png" alt="CIPC Incorporation Icon">
-  <h3>CIPC Business Incorporation Services</h3>
+  <h3>Business Incorporation Services in South Africa</h3>
   <p>Register or manage your company in the <strong>Republic of South Africa</strong>. 
      Get expert guidance, full administrative support, and ensure your business complies with the Republic of South African legal requirements.</p>
   <a  href="mailto:thqcs@protonmail.com?subject=ZA incorporation - THQCDU-21712"
