--- a/services.html
+++ b/services.html
@@ -333,11 +333,10 @@
   <img src="https://cdn-icons-png.flaticon.com/512/2991/2991112.png" alt="CIPC Incorporation Icon">
   <h3>Business Incorporation Services in South Africa</h3>
   <p>Register or manage your company in the <strong>Republic of South Africa</strong>. 
-     Get expert guidance, full administrative support, and ensure your business complies with the Republic of South African legal requirements.</p>
-  <a  href="mailto:thqcs@protonmail.com?subject=ZA incorporation - THQCDU-21712"
-     style="background-color: #228B22; color: white; padding: 10px 15px; border-radius: 5px; font-weight: bold; text-decoration: none; display: inline-block;">
-    🇿🇦 Contact Us
-  </a>
+     Get expert guidance, full administrative support, and ensure your business complies with the Republic of South African legal requirements.<br>Waiting Period: 3-5 Business Days.</p>
+  <a href="https://nowpayments.io/payment/?iid=4337282928&source=button" target="_blank" rel="noreferrer noopener">
+    <img src="https://nowpayments.io/images/embeds/payment-button-black.svg" alt="Crypto payment button by NOWPayments">
+</a>
 </div>
           
         <!-- Land for Lease -->
