--- a/services.html
+++ b/services.html
@@ -330,7 +330,7 @@
 
 <!-- South African Business Incorporation Services -->
 <div class="catalog-item">
-  <img src="https://cdn-icons-png.flaticon.com/512/2991/2991112.png" alt="CIPC Incorporation Icon">
+  <img src="https://cdn-icons-png.flaticon.com/512/2991/2991112.png" alt="Business Incorporation Icon">
   <h3>Business Incorporation Services in South Africa</h3>
   <p>Register or manage your company in the <strong>Republic of South Africa</strong>. 
      Get expert guidance, full administrative support, and ensure your business complies with the Republic of South African legal requirements.<br>Waiting Period: 3-5 Business Days.</p>
