--- a/services.html
+++ b/services.html
@@ -257,6 +257,11 @@
             </a>
 
         </div>
+
+          <div class="catalog-item">
+              <iframe id="intuiIframe" src="https://en.intui.travel/?p_site=28720171&constructor=1&color_scheme=bg&b=111111111111111111&h=Airport%20transfers%20executed%20by%20local%20Professional%20companies" frameborder="0" scrolling="no" width="100%" height="318px"></iframe>
+<script type="text/javascript" src="https://www.intui.travel/public/js/jquery/iframeResizer.js"></script>
+          </div>
           
         <div class="catalog-item">
             <img src="https://cdn-icons-png.flaticon.com/512/684/684908.png" alt="Remote Sensing Service">
