--- a/bookings.html
+++ b/bookings.html
@@ -1,2 +1,241 @@
+<!--Non Commercial -->
+<!--Reference: THQCDU-2147726840670722-->
+<!--Confidential-->
+<!--Private property of THQ Cyber Division and Association -->
+<!--Dimension 7th Av 5785 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<!-- Basic Meta Tags -->
+<title>About Us | THQ Cyber Division Unincorporated</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="THQ Cyber Division Unincorporated offers premium virtual assistant services including document writing, proofreading, data entry, and remote IT support.">
+<meta name="keywords" content="virtual assistant, document writing, proofreading, data entry, research, IT support, THQ Cyber Division">
+<meta name="author" content="THQ Cyber Division Unincorporated">
+<meta name="google-site-verification" content="Nx8hQYvwpEVXpzDwblQT1xmLanPVBfI_JmBMlXvbBVQ" />
+
+<!-- Open Graph Tags -->
+<meta property="og:title" content="About Us | THQ Cyber Division Unincorporated">
+<meta property="og:description" content="Empowering your productivity with reliable virtual assistant and IT support services.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://thqcyberdivision.github.io/">
+<meta property="og:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+
+<!-- Twitter Card Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="THQ Cyber Division Unincorporated">
+<meta name="twitter:description" content="Explore expert virtual assistant and remote IT services.">
+<meta name="twitter:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "Organization",
+	  "name": "THQ Cyber Division Unincorporated",
+	  "url": "https://thqcyberdivision.github.io/",
+	  "logo": "https://thqcyberdivision.github.io/logo.png",
+	  "description": "THQ Cyber Division Unincorporated provides virtual assistant and IT support services worldwide, helping individuals and businesses increase productivity with expert support.",
+	  "sameAs": [
+	    "https://github.com/thqcyberdivision"
+	  ],
+	  "contactPoint": {
+	    "@type": "ContactPoint",
+	    "contactType": "Customer Support",
+	    "email": "thqcs@protonmail.com",
+	    "areaServed": "Worldwide",
+	    "availableLanguage": ["English"]
+	  }
+	}
+</script>
+
+<link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
+<meta name="theme-color" content="#007bff">
+    <div id="google_translate_element"></div>
+
+	    <!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-T83TYG9SG6"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-T83TYG9SG6');
+	</script>
+    <script type="text/javascript">
+	    function googleTranslateElementInit() {
+	        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+	    }
+	</script>
+	<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+    <script>
+        // Register the service worker
+	if ('serviceWorker' in navigator) {
+	  navigator.serviceWorker.register('https://thqcyberdivision.github.io/service-worker.js').then((registration) => {
+	    console.log('Service Worker registered');
+	    
+	    // Listen for updates to the service worker
+	    registration.addEventListener('updatefound', () => {
+	      const newWorker = registration.installing;
+	      newWorker.addEventListener('statechange', () => {
+	        if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+	          alert('A new version is available. Please refresh the page.');
+	        }
+	      });
+	    });
+	  }).catch((error) => {
+	    console.error('Service Worker registration failed:', error);
+	  });
+	}
+	
+	// Detect online/offline status and display notification
+	const statusElement = document.getElementById('status');
+	function updateOnlineStatus() {
+	  const isOnline = navigator.onLine;
+	  statusElement.textContent = isOnline ? 'You are online' : 'You are offline';
+	  if (!isOnline) {
+	    alert('You are offline. The app will continue to work with cached data.');
+	  }
+	}
+	window.addEventListener('online', updateOnlineStatus);
+	window.addEventListener('offline', updateOnlineStatus);
+	updateOnlineStatus();
+	
+	// Fetch data function
+	const dataElement = document.getElementById('data');
+	document.getElementById('refresh').addEventListener('click', fetchData);
+	
+	function fetchData() {
+	  fetch('https://jsonplaceholder.typicode.com/posts/1')
+	    .then((response) => response.json())
+	    .then((data) => {
+	      dataElement.textContent = `Title: ${data.title}`;
+	    })
+	    .catch((error) => {
+	      dataElement.textContent = 'Failed to fetch data. You are offline.';
+	      console.error('Fetch error:', error);
+	    });
+	}
+	
+    </script>
+	<link rel="icon" type="image/png" sizes="16x16" href="https://thqcyberdivision.github.io/favicon_16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://thqcyberdivision.github.io/favicon_32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="https://thqcyberdivision.github.io/favicon_96x96.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_192x192.png">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            color: #000;
+            background-image: url('website_cover.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        header {
+            background-color: #000;
+            color: #fff;
+            text-align: center;
+            padding: 15px 0;
+        }
+        header img {
+            width: 100px;
+            display: block;
+            margin: 0 auto;
+        }
+        header h1 {
+            font-size: 1.5em;
+            margin: 10px 0 0;
+        }
+        nav {
+            background-color: #000;
+            padding: 10px;
+            display: flex;
+            justify-content: center;
+        }
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: all 0.3s ease-in-out;
+        }
+
+        nav a:hover {
+	    background-color: rgb(65,105,225);
+            color: #000;
+            text-decoration: None;
+        }
+        main {
+            padding: 20px 15px;
+            text-align: center;
+        }
+        main h1 {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+        main p {
+            font-size: 1.2em;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        footer {
+            background-color: #000;
+            color: #fff;
+            text-align: center;
+            padding: 15px 10px;
+        }
+        footer img {
+            width: 30px;
+            margin: 0 5px;
+            cursor: pointer;
+        }
+        footer img:hover {
+            opacity: 0.7;
+        }
+	
+	.overlay-tile {
+	    background-color: rgba(255, 255, 255, 0.8); /* white with 80% opacity */
+	    padding: 20px;
+	    border-radius: 10px;
+	    display: inline-block;
+	    margin-top: 20px;
+	    max-width: 800px;
+	    margin-left: auto;
+	    margin-right: auto;
+	}
+    </style>
+</head>
+<body>
+    <header>
+	    
+	     <a href="https://thqcyberdivision.github.io/index.html">
+        <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
+	     </a>
+        <h1>Airport Transfers - THQ Cyber Division</h1>
+    </header>
+    <nav>
+        <a href="https://thqcyberdivision.github.io/index.html">Home</a>
+        <a href="https://thqcyberdivision.github.io/about.html">About Us</a>
+        <a href="https://thqcyberdivision.github.io/services.html">Services</a>
+    </nav>
+    <main>
 <iframe id="intuiIframe" src="https://en.intui.travel/?p_site=28720171&constructor=1&color_scheme=bg&b=111111111111111111&h=Airport%20transfers%20executed%20by%20local%20Professional%20companies" frameborder="0" scrolling="no" width="100%" height="318px"></iframe>
 <script type="text/javascript" src="https://www.intui.travel/public/js/jquery/iframeResizer.js"></script>
+
+    </main>
+    <footer>
+        <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
+        <nav>
+	    <a href="terms.html">Terms of Use</a> |
+	    <a href="privacy.html">Privacy Policy</a> |
+	    <a href="mailto:thqcs@protonmail.com">Email Us</a>
+	</nav>
+    </footer>
+</body>
+</html>
