--- a/bookings.html
+++ b/bookings.html
@@ -2,7 +2,7 @@
 <!--Reference: THQCDU-2147726840670722-->
 <!--Confidential-->
 <!--Private property of THQ Cyber Division and Association -->
-<!--Dimension 7th Av 5785 -->
+<!--Dimension 7th Elul 5785 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
