--- a/services.html
+++ b/services.html
@@ -259,8 +259,15 @@
         </div>
 
           <div class="catalog-item">
-            <h3>Professional Airport Transfers</h3>
-            <p>Never be late for a meeting with over 152 countries supported</p>
+              <h3>Shuttle Bus & Economy</h3>
+  <p>Affordable shuttle bus tickets, passenger cars & economy minivans.</p>
+  <p><strong>From €3</strong></p>
+              <h3>Individual Transfers</h3>
+  <p>Private cars with meet & greet service. Standard, business, limousines & convertibles.</p>
+  <p><strong>From €7</strong></p>
+        <h3>Combined Transfers</h3>
+          <p>Seamless car + boat or car + ferry combinations for smooth island trips.</p>
+          <p><strong>From €50</strong></p>
             <a href="https://thqcyberdivision.github.io/bookings.html" target="_blank" rel="noreferrer noopener">
                 <img src="https://www.intui.travel/public/upload/B2B/new_2019_banners/EN/business/336_280_Busn_EN.jpg" alt="Banner Travel Agency">
             </a>
